--- a/src/css/contact.less
+++ b/src/css/contact.less
@@ -1,3 +1,11 @@
+@media screen and (max-width: 767px) {
+  div[bmy-channel] img {
+    width: 100%;
+  }
+  .site-content.contactus  img {
+    width: 100%;
+  }
+}
 .page-contactus {
   background-color: #f4f5f9;
 
