--- a/src/css/events.less
+++ b/src/css/events.less
@@ -1,3 +1,31 @@
+@media screen and (max-width: 767px) {
+  div[bmy-channel] img {
+    width: 100% !important;
+  }
+  ul.event-list {
+    width: 100% !important;
+    li {
+      text-align: center;
+      p {
+        position: relative !important;
+        left: 0 !important;
+      }
+    }
+  }
+  .history-events {
+    margin: 10px 20px !important;
+  }
+  #am-2746-element > .element-content > div > div > p {
+    word-break: break-all;
+  }
+  .page-events {
+    .main-event {
+      a {
+        width: 100% !important;
+      }
+    }
+  }
+}
 .page-events {
   .main-event{
     padding: 10px;
