--- a/src/css/group_news.less
+++ b/src/css/group_news.less
@@ -1,3 +1,8 @@
+@media screen and (max-width: 767px) {
+  div[bmy-channel] img {
+    width: 100%;
+  }
+}
 .page-group {
   background-color: #f4f5f9;
   padding-top: 20px;
