--- a/src/css/main.less
+++ b/src/css/main.less
@@ -1,5 +1,12 @@
+@media screen and (max-width: 767px) {
+  div[bmy-channel] img {
+    width: 100%;
+  }
+  .site-main {
+    margin-top: 100px !important;
+  }
+}
 .page-index {
-  min-width: 1140px;
   header .bg{
     background: #000;
     opacity: 0.3;
@@ -7,7 +14,41 @@
   .site-main {
     margin: 0px auto 0;
   }
+  .site-header {
+      .navbar-nav {
+        margin-right: 5px;
+      }
+      @media screen and (max-width: 768px) {
+        .navbar-nav {
+          background: #000;
+          opacity: 0.7
+        }
+        .navbar-nav>li {
+          padding: 5px 0 20px !important;
+        }
+      }
+      .navbar-collapse {
+        overflow: hidden;
+      }
+  }
+  .container-fluid {
+      padding-left: 0;
+      padding-right: 0;
+  }
+  
+  .navbar .navbar-toggle {
+    margin-top: 20px;
+    .icon-bar {
+      background-color: white;
+    }
+  }
 
+  @media screen and (max-width: 767px) {
+    #banner {
+      overflow: inherit !important;
+      margin-bottom: 58px;
+    }
+  }
   #banner{
     box-shadow: 0 1px 6px rgba(0, 0, 0, 0.1);
     position: relative;
@@ -66,6 +107,20 @@
       width: 100%;
       padding: 3px;
     }
+    @media screen and (max-width: 768px) {
+      ul {
+        width: auto !important;
+        height: auto !important;
+      }
+      .bottom-block {
+        bottom: -48px;
+      }
+    }
+    @media screen and (max-width: 300px) {
+      ul {
+        display: none !important;
+      }
+    }
     ul{
       display: block;  
       width: 700px;
@@ -91,6 +146,12 @@
           margin: 6px 0;
           height: 30px;
           padding: 4px;
+        }
+        @media screen and (max-width: 768px) {
+          a {
+            font-size: 2vw;
+            height: auto;
+          }
         }
       }
       .bd-right{
@@ -302,6 +363,12 @@
       #f2, #f3, #f5{
         border-left: 1px solid #ddd; 
       }
+
+      @media screen and (max-width: 1280px) {
+        #f2, #f3, #f5 {
+          border-left: none; 
+        }
+      }
     }
   }
   .modal-dialog{
@@ -309,17 +376,5 @@
     .mejs-fullscreen-button{
       display: none;
     }
-  }
-}
-
-
-// Styles for MobileView
-.mobile-view {
-  .site-main {
-    margin-top: 110px;
-  }
-
-  #business {
-
   }
 }
