--- a/src/css/events.less
+++ b/src/css/events.less
@@ -65,7 +65,7 @@
       cursor: pointer;
       border: 1px solid #fff;
       img{
-        width: 100%;
+        max-width: 100%;
         height: 100%;
       }
     }
