--- a/src/css/group_news.less
+++ b/src/css/group_news.less
@@ -22,7 +22,7 @@
       margin-bottom: 6px;
     }
     li.active{
-      a{
+      &>a{
         background: @site-color;
         color: #fff;
       }
